--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dayjs": "^1.9.1",
+    "async-mqtt": "^2.6.1",
+    "dayjs": "^1.10.4",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
     "millisecond": "^0.1.2",
