--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async-mqtt": "^2.6.1",
-    "dayjs": "^1.10.4",
-    "express": "^4.17.1",
-    "lodash": "^4.17.20",
-    "millisecond": "^0.1.2",
-    "needle": "^2.5.2",
-    "nodemailer": "^6.4.13"
+    "async-mqtt": "2.6.1",
+    "dayjs": "1.10.4",
+    "express": "4.17.1",
+    "lodash": "4.17.21",
+    "millisecond": "0.1.2",
+    "needle": "2.6.0",
+    "nodemailer": "6.6.0"
   },
   "devDependencies": {
-    "eslint": "^7.11.0",
-    "eslint-config-es": "^3.24.2",
-    "eslint-plugin-json": "^2.1.2",
-    "eslint-plugin-mocha": "^8.0.0"
+    "eslint": "7.26.0",
+    "eslint-config-es": "3.28.30",
+    "eslint-plugin-json": "3.0.0",
+    "eslint-plugin-mocha": "8.1.0"
   }
 }
