--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     'capitalized-comments': 0,
     'comma-dangle': [2, 'always-multiline'],
     'dot-location': [2, 'property'],
+    'eslint-comments/disable-enable-pair': 0,
     'indent': [
       2,
       2,
