--- a/package.json
+++ b/package.json
@@ -11,17 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "async-mqtt": "2.6.1",
-    "dayjs": "1.10.4",
+    "dayjs": "1.10.7",
     "express": "4.17.1",
     "lodash": "4.17.21",
     "millisecond": "0.1.2",
-    "needle": "2.6.0",
-    "nodemailer": "6.6.0"
+    "needle": "3.0.0",
+    "nodemailer": "6.7.1"
   },
   "devDependencies": {
-    "eslint": "7.26.0",
-    "eslint-config-es": "3.28.30",
-    "eslint-plugin-json": "3.0.0",
-    "eslint-plugin-mocha": "8.1.0"
+    "eslint": "8.2.0",
+    "eslint-config-es": "4.1.0",
+    "eslint-plugin-json": "3.1.0"
   }
 }
