--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async-mqtt": "2.6.1",
-    "dayjs": "1.10.7",
-    "express": "4.17.1",
+    "async-mqtt": "2.6.2",
+    "axios": "0.26.1",
+    "dayjs": "1.11.0",
+    "express": "4.17.3",
     "lodash": "4.17.21",
-    "millisecond": "0.1.2",
-    "needle": "3.0.0",
-    "nodemailer": "6.7.1"
+    "ms": "2.1.3",
+    "nodemailer": "6.7.3"
   },
   "devDependencies": {
-    "eslint": "8.2.0",
+    "eslint": "8.11.0",
     "eslint-config-es": "4.1.0",
     "eslint-plugin-json": "3.1.0"
   }
