--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "license": "ISC",
   "dependencies": {
     "async-mqtt": "2.6.2",
-    "axios": "0.26.1",
-    "dayjs": "1.11.0",
-    "express": "4.17.3",
+    "axios": "0.27.2",
+    "dayjs": "1.11.5",
+    "express": "4.18.1",
     "lodash": "4.17.21",
     "ms": "2.1.3",
-    "nodemailer": "6.7.3"
+    "nodemailer": "6.7.8"
   },
   "devDependencies": {
-    "eslint": "8.11.0",
-    "eslint-config-es": "4.1.0",
+    "eslint": "8.22.0",
+    "eslint-config-es": "4.2.0",
+    "eslint-plugin-eslint-comments": "3.2.0",
+    "eslint-plugin-extended": "0.2.0",
+    "eslint-plugin-import": "2.25.2",
     "eslint-plugin-json": "3.1.0"
   }
 }
